--- a/BrickBreakerDriver/nbproject/private/private.properties
+++ b/BrickBreakerDriver/nbproject/private/private.properties
@@ -9,5 +9,5 @@ javadoc.preview=true
 javafx.run.as=standalone
 javafx.run.inbrowser=<Default System Browser>
 javafx.run.inbrowser.path=C:\\Program Files (x86)\\Google\\Chrome\\Application\\chrome.exe
-user.properties.file=C:\\Users\\kelvin\\AppData\\Roaming\\NetBeans\\8.1\\build.properties
+user.properties.file=/Users/CCannon/Library/Application Support/NetBeans/8.1/build.properties
 work.dir=C:\\Users\\kelvin\\CloudStation\\CourseWare\\GEEN165\\Fall 2017\\Major Programs\\MP1\\BrickData
