--- a/BrickBreakerDriver/nbproject/project.properties
+++ b/BrickBreakerDriver/nbproject/project.properties
@@ -30,13 +30,15 @@ dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
 file.reference.BrickBreakerEngine.jar=/Users/CCannon/Documents/COMP167/Major-Program-1-Student-Repos/major-program-1-brick-breaker-LouisYoung28/BrickBreakerEngine.jar
+file.reference.BrickBreakerStudent.jar=/Users/CCannon/Documents/COMP167/Major-Program-1-Student-Repos/major-program-1-brick-breaker-LouisYoung28/BrickBreakerStudent/dist/BrickBreakerStudent.jar
 includes=**
 # Non-JavaFX jar file creation is deactivated in JavaFX 2.0+ projects
 jar.archive.disabled=true
 jar.compress=false
 javac.classpath=\
     ${javafx.classpath.extension}:\
-    ${file.reference.BrickBreakerEngine.jar}
+    ${file.reference.BrickBreakerEngine.jar}:\
+    ${file.reference.BrickBreakerStudent.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
