--- a/BrickBreakerDriver/nbproject/private/private.properties
+++ b/BrickBreakerDriver/nbproject/private/private.properties
@@ -8,6 +8,6 @@ javac.debug=true
 javadoc.preview=true
 javafx.run.as=standalone
 javafx.run.inbrowser=<Default System Browser>
-javafx.run.inbrowser.path=C:\\Program Files (x86)\\Google\\Chrome\\Application\\chrome.exe
+javafx.run.inbrowser.path=/usr/bin/open
 user.properties.file=/Users/CCannon/Library/Application Support/NetBeans/8.1/build.properties
-work.dir=C:\\Users\\kelvin\\CloudStation\\CourseWare\\GEEN165\\Fall 2017\\Major Programs\\MP1\\BrickData
+work.dir=/Users/CCannon/Documents/COMP167/MP1-solution
