--- a/BrickBreakerDriver/nbproject/private/private.properties
+++ b/BrickBreakerDriver/nbproject/private/private.properties
@@ -10,4 +10,4 @@ javafx.run.as=standalone
 javafx.run.inbrowser=<Default System Browser>
 javafx.run.inbrowser.path=/usr/bin/open
 user.properties.file=/Users/CCannon/Library/Application Support/NetBeans/8.1/build.properties
-work.dir=/Users/CCannon/Documents/COMP167/MP1-solution
+work.dir=../
