Refresh student jar with updated Color

--- a/BrickBreakerDriver/nbproject/project.properties
+++ b/BrickBreakerDriver/nbproject/project.properties
@@ -37,8 +37,8 @@ jar.archive.disabled=true
 jar.compress=false
 javac.classpath=\
     ${javafx.classpath.extension}:\
-    ${file.reference.BrickBreakerStudent.jar}:\
-    ${file.reference.BrickBreakerEngine.jar}
+    ${file.reference.BrickBreakerEngine.jar}:\
+    ${file.reference.BrickBreakerStudent.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
